Enable migrations, move code around

--- a/MyDwellworks/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/MyDwellworks/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.Models.ExternalLoginConfirmationViewModel
+﻿@model MyDwellworks.Core.ViewModels.Authentication.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
