--- a/MyDwellworks/Views/Account/ForgotPassword.cshtml
+++ b/MyDwellworks/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.Models.ForgotPasswordViewModel
+﻿@model MyDwellworks.Core.ViewModels.Authentication.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
