--- a/MyDwellworks/Views/Account/Login.cshtml
+++ b/MyDwellworks/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
-﻿@using MyDwellworks.Models
-@model LoginViewModel
+﻿@using MyDwellworks.Core.ViewModels.Authentication
+@model MyDwellworks.Core.ViewModels.Authentication.LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
