--- a/MyDwellworks/Views/Account/SendCode.cshtml
+++ b/MyDwellworks/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.Models.SendCodeViewModel
+﻿@model MyDwellworks.Core.ViewModels.Authentication.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
