--- a/MyDwellworks/Views/Account/VerifyCode.cshtml
+++ b/MyDwellworks/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.Models.VerifyCodeViewModel
+﻿@model MyDwellworks.Core.ViewModels.Authentication.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
