--- a/MyDwellworks/Views/Manage/ChangePassword.cshtml
+++ b/MyDwellworks/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.Models.ChangePasswordViewModel
+﻿@model MyDwellworks.Core.ViewModels.Authentication.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
