Add authorize for home controller and remove references to mydw.core

--- a/MyDwellworks/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/MyDwellworks/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.Core.ViewModels.Authentication.ExternalLoginConfirmationViewModel
+﻿@model MyDwellworks.ViewModels.Authentication.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
