--- a/MyDwellworks/Views/Account/Login.cshtml
+++ b/MyDwellworks/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.Core.ViewModels.Authentication.LoginViewModel
+﻿@model MyDwellworks.ViewModels.Authentication.LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
