--- a/MyDwellworks/Views/Account/Register.cshtml
+++ b/MyDwellworks/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.Core.ViewModels.Authentication.RegisterViewModel
+﻿@model MyDwellworks.ViewModels.Authentication.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
