--- a/MyDwellworks/Views/Account/ResetPassword.cshtml
+++ b/MyDwellworks/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.Core.ViewModels.Authentication.ResetPasswordViewModel
+﻿@model MyDwellworks.ViewModels.Authentication.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
