--- a/MyDwellworks/Views/Manage/AddPhoneNumber.cshtml
+++ b/MyDwellworks/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.Core.ViewModels.Authentication.AddPhoneNumberViewModel
+﻿@model MyDwellworks.ViewModels.Authentication.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
