--- a/MyDwellworks/Views/Manage/ManageLogins.cshtml
+++ b/MyDwellworks/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.Core.ViewModels.Authentication.ManageLoginsViewModel
+﻿@model MyDwellworks.ViewModels.Authentication.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
