--- a/MyDwellworks/Views/Manage/SetPassword.cshtml
+++ b/MyDwellworks/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.Core.ViewModels.Authentication.SetPasswordViewModel
+﻿@model MyDwellworks.ViewModels.Authentication.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
