--- a/MyDwellworks/Views/Manage/Index.cshtml
+++ b/MyDwellworks/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.Core.ViewModels.Authentication.IndexViewModel
+﻿@model MyDwellworks.ViewModels.Authentication.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
