--- a/MyDwellworks/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/MyDwellworks/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.Core.ViewModels.Authentication.VerifyPhoneNumberViewModel
+﻿@model MyDwellworks.ViewModels.Authentication.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
