Fix ninject web api bindings

--- a/MyDwellworks/Views/Account/UserManagement.cshtml
+++ b/MyDwellworks/Views/Account/UserManagement.cshtml
@@ -12,7 +12,7 @@
             User
         </th>
         <th>
-            Type
+            Roles
         </th>
         <th>
             Phone
