Adjust namesspaces for odin

--- a/Odin/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Odin/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.ViewModels.Authentication.ExternalLoginConfirmationViewModel
+﻿@model Odin.ViewModels.Authentication.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
