--- a/Odin/Views/Account/Login.cshtml
+++ b/Odin/Views/Account/Login.cshtml
@@ -1,5 +1,4 @@
-﻿@using MyDwellworks.ViewModels.Authentication
-@model MyDwellworks.ViewModels.Authentication.LoginViewModel
+﻿@model Odin.ViewModels.Authentication.LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
