--- a/Odin/Views/Account/Register.cshtml
+++ b/Odin/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.ViewModels.Authentication.RegisterViewModel
+﻿@model Odin.ViewModels.Authentication.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
