--- a/Odin/Views/Account/ResetPassword.cshtml
+++ b/Odin/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.ViewModels.Authentication.ResetPasswordViewModel
+﻿@model Odin.ViewModels.Authentication.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
