--- a/Odin/Views/Account/SendCode.cshtml
+++ b/Odin/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.ViewModels.Authentication.SendCodeViewModel
+﻿@model Odin.ViewModels.Authentication.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
