--- a/Odin/Views/Manage/AddPhoneNumber.cshtml
+++ b/Odin/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.ViewModels.Authentication.AddPhoneNumberViewModel
+﻿@model Odin.ViewModels.Authentication.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
