--- a/Odin/Views/Manage/ChangePassword.cshtml
+++ b/Odin/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.ViewModels.Authentication.ChangePasswordViewModel
+﻿@model Odin.ViewModels.Authentication.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
