--- a/Odin/Views/Manage/Index.cshtml
+++ b/Odin/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.ViewModels.Authentication.IndexViewModel
+﻿@model Odin.ViewModels.Authentication.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
