--- a/Odin/Views/Manage/ManageLogins.cshtml
+++ b/Odin/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.ViewModels.Authentication.ManageLoginsViewModel
+﻿@model Odin.ViewModels.Authentication.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
