--- a/Odin/Views/Manage/SetPassword.cshtml
+++ b/Odin/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.ViewModels.Authentication.SetPasswordViewModel
+﻿@model Odin.ViewModels.Authentication.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
