--- a/Odin/Views/Account/ForgotPassword.cshtml
+++ b/Odin/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.ViewModels.Authentication.ForgotPasswordViewModel
+﻿@model Odin.ViewModels.Authentication.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
