--- a/Odin/Views/Account/VerifyCode.cshtml
+++ b/Odin/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.ViewModels.Authentication.VerifyCodeViewModel
+﻿@model Odin.ViewModels.Authentication.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
