--- a/Odin/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Odin/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyDwellworks.ViewModels.Authentication.ExternalLoginListViewModel
+﻿@model Odin.ViewModels.Authentication.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
