--- a/Odin/Views/Shared/_LoginPartial.cshtml
+++ b/Odin/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
-@using MyDwellworks.Data.Core.Models
+@using Odin.Data.Core.Models
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
