Add more UI to order index view

--- a/Odin/Content/Site.css
+++ b/Odin/Content/Site.css
@@ -35,3 +35,36 @@ textarea {
     right: -1px;
     background: #a80a0a;
 }
+
+.voffset {
+    margin-top: 2px;
+}
+
+.voffset1 {
+    margin-top: 5px;
+}
+
+.voffset2 {
+    margin-top: 10px;
+}
+
+.voffset3 {
+    margin-top: 20px;
+}
+
+.voffset4 {
+    margin-top: 40px;
+}
+
+.voffset5 {
+    margin-top: 80px;
+}
+
+/* Page-level styles */
+.orders {
+    list-style: none;
+}
+
+.orders > li .transferee {
+    
+}
