Add new images and change to divs for transferee index

--- a/Odin/Content/Site.css
+++ b/Odin/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 90px;
     padding-bottom: 20px;
 }
 
@@ -61,10 +61,36 @@ textarea {
 }
 
 /* Page-level styles */
-.orders {
-    list-style: none;
+
+
+.transferee-list > div .transferee {
+    font-weight: 400;
+    font-size: 14px;
 }
 
-.orders > li .transferee {
-    
+.transferee-list > div a:hover {
+    text-decoration: none;
+}
+
+.transferee-list > div .user-image {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
+.placeholder-image {
+    background-image: url('/Content/Images/user-placeholder.png');
+}
+
+.blue {
+    color: dodgerblue;
+}
+
+.glyphicon-large {
+    font-size: 25px;
 }
