Add estimated arrival to orders

--- a/Odin/Content/Site.css
+++ b/Odin/Content/Site.css
@@ -94,3 +94,13 @@ textarea {
 .glyphicon-large {
     font-size: 25px;
 }
+
+.small-label {
+    font-size: 10px;
+    font-weight: 400;
+    margin-bottom: 0;
+}
+
+.grey-header {
+    color: darkgrey;
+}
