--- a/Odin/Views/Shared/_Layout.cshtml
+++ b/Odin/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Orders")</li>
+                    @*<li>@Html.ActionLink("Home", "Index", "Orders")</li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
