--- a/Odin/Views/Account/ResetPassword.cshtml
+++ b/Odin/Views/Account/ResetPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Odin.ViewModels.Authentication.ResetPasswordViewModel
 @{
-    ViewBag.Title = "Reset password";
+    ViewBag.Title = "Set/Reset password";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Reset your password.</h4>
+    <h4>Set/Reset your password.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Code)
