--- a/Odin/Content/Home/home.css
+++ b/Odin/Content/Home/home.css
@@ -13,6 +13,7 @@ div#main div#caption {
   width: 48%;
   height: 118px;
   padding-top: 44px;
+  vertical-align: top;
   display: inline-block; }
   div#main div#caption img {
     padding-left: 30px; }
@@ -33,10 +34,11 @@ div#main div#caption {
 
 div#main div#icons {
   float: right;
-  width: 40%;
+  width: 48%;
   height: 118px;
-  margin-right: 16px;
+  margin-right: 5px;
   padding-top: 20px;
+  vertical-align: top;
   display: inline-block; }
   div#main div#icons div {
     float: right;
@@ -51,7 +53,7 @@ div#main div#list {
   padding-bottom: 45px;
   border-top: 1px solid #979797; }
   div#main div#list div#search {
-    margin: 20px 0px 30px 47px; }
+    margin: 20px 0px 60px 47px; }
     div#main div#list div#search input {
       width: 300px;
       max-width: none; }
@@ -80,9 +82,11 @@ div#main div#list {
     div#main div#list th.seventh {
       padding-left: 10px; }
       div#main div#list th.seventh > span {
-        left: 7px; }
+        left: 1px; }
   div#main div#list td {
-    border: none; }
+    border: none;
+    white-space: nowrap;
+    vertical-align: top; }
     div#main div#list td div.actlist-item-hdr {
       display: inline-block;
       width: 30%; }
@@ -113,6 +117,111 @@ div#main div#list {
   div#main div#list table {
     width: 96%;
     margin: 30px 40px 0px 40px; }
+
+@media screen and (min-width: 992px) {
+  div#main table.tablet {
+    display: none; }
+  div#main table.mobile {
+    display: none; } }
+
+@media screen and (min-width: 800px) and (max-width: 992px) {
+  div#main table.desktop {
+    display: none; }
+  div#main th.second {
+    padding-left: 29px !important; }
+  div#main th.fifth {
+    padding-left: 10px !important; }
+  div#main table.mobile {
+    display: none; } }
+
+@media screen and (max-width: 799px) {
+  div#main table.desktop {
+    display: none; }
+  div#main table.tablet {
+    display: none; }
+  div#main div#caption {
+    height: 76px;
+    padding-top: 20px;
+    text-align: center;
+    width: 89% !important;
+    display: block !important; }
+  div#main div#icons {
+    height: 76px;
+    text-align: center;
+    padding-top: 0px;
+    float: none !important;
+    width: 97% !important;
+    display: block !important; }
+    div#main div#icons div {
+      float: none !important; }
+  div#main th.second {
+    padding-left: 54px !important; }
+  div#main th.third {
+    padding-left: 10px !important; } }
+
+@media screen and (max-width: 483px) {
+  div#main table.desktop {
+    display: none; }
+  div#main table.tablet {
+    display: none; }
+  div#main table.mobile {
+    margin-left: 0 !important; }
+  div#main div#caption {
+    height: 76px;
+    padding-top: 20px;
+    text-align: center;
+    width: 89% !important;
+    display: block !important; }
+  div#main div#icons {
+    height: 76px;
+    text-align: center;
+    padding-top: 0px;
+    float: none !important;
+    width: 97% !important;
+    display: block !important; }
+    div#main div#icons div {
+      float: none !important; }
+  div#main th.second {
+    padding-left: 54px !important; }
+  div#main th.third {
+    padding-left: 10px !important; }
+  div#main div#search {
+    margin-left: 0px !important; }
+    div#main div#search input {
+      width: 230px !important; } }
+
+@media screen and (max-width: 365px) {
+  div#main table.desktop {
+    display: none; }
+  div#main table.tablet {
+    display: none; }
+  div#main table.mobile {
+    margin-left: 0 !important; }
+  div#main div#caption {
+    height: 76px;
+    padding-top: 20px;
+    text-align: center;
+    width: 89% !important;
+    display: block !important; }
+  div#main div#icons {
+    height: 76px;
+    text-align: center;
+    padding-top: 0px;
+    float: none !important;
+    width: 97% !important;
+    display: block !important; }
+    div#main div#icons div {
+      float: none !important; }
+  div#main th.second {
+    padding-left: 54px !important; }
+  div#main th.third {
+    padding-left: 10px !important; }
+  div#main div#search {
+    margin-left: 0px !important; }
+    div#main div#search input {
+      width: 230px !important; }
+    div#main div#search button {
+      margin-left: 0px !important; } }
 
 div#main .arrow_up {
   display: inline-block;
