--- a/Odin/Content/Home/home.scss
+++ b/Odin/Content/Home/home.scss
@@ -18,6 +18,7 @@ div#main {
         width: 48%;
         height: 118px;
         padding-top: 44px;
+        vertical-align: top;
         display: inline-block;
 
         img {
@@ -47,16 +48,17 @@ div#main {
 
     div#icons {
         float: right;
-        width: 40%;
+        width: 48%;
         height: 118px;
-        margin-right: 16px;
+        margin-right: 5px;
         padding-top: 20px;
+        vertical-align: top;
         display: inline-block;
 
         div {
             float: right;
             display: inline-block;
- 
+
             img {
                 float: right;
                 width: 40px;
@@ -71,7 +73,7 @@ div#main {
         border-top: 1px solid #979797;
 
         div#search {
-            margin: 20px 0px 30px 47px;
+            margin: 20px 0px 60px 47px;
 
             input {
                 width: 300px;
@@ -124,13 +126,15 @@ div#main {
                 padding-left: 10px;
 
                 > span {
-                    left: 7px;
+                    left: 1px;
                 }
             }
         }
 
         td {
             border: none;
+            white-space: nowrap;
+            vertical-align: top;
 
             div.actlist-item-hdr {
                 display: inline-block;
@@ -179,6 +183,187 @@ div#main {
         table {
             width: 96%;
             margin: 30px 40px 0px 40px;
+        }
+    }
+
+    @media screen and (min-width: 992px) {
+        table.tablet {
+            display: none;
+        }
+
+        table.mobile {
+            display: none;
+        }
+    }
+
+    @media screen and (min-width: 800px) and (max-width: 992px) {
+        table.desktop {
+            display: none;
+        }
+
+        th {
+            &.second {
+                padding-left: 29px !important;
+            }
+
+            &.fifth {
+                padding-left: 10px !important;
+            }
+        }
+
+        table.mobile {
+            display: none;
+        }
+    }
+
+    @media screen and (max-width: 799px) {
+        table.desktop {
+            display: none;
+        }
+
+        table.tablet {
+            display: none;
+        }
+
+        div#caption {
+            height: 76px;
+            padding-top: 20px;
+            text-align: center;
+            width: 89% !important;
+            display: block !important;
+        }
+
+        div#icons {
+            height: 76px;
+            text-align: center;
+            padding-top: 0px;
+            float: none !important;
+            width: 97% !important;
+            display: block !important;
+
+            div {
+                float: none !important;
+            }
+        }
+
+        th {
+            &.second {
+                padding-left: 54px !important;
+            }
+
+            &.third {
+                padding-left: 10px !important;
+            }
+        }
+    }
+
+    @media screen and (max-width: 483px) {
+        table.desktop {
+            display: none;
+        }
+
+        table.tablet {
+            display: none;
+        }
+
+        table.mobile {
+            margin-left: 0 !important;
+        }
+
+        div#caption {
+            height: 76px;
+            padding-top: 20px;
+            text-align: center;
+            width: 89% !important;
+            display: block !important;
+        }
+
+        div#icons {
+            height: 76px;
+            text-align: center;
+            padding-top: 0px;
+            float: none !important;
+            width: 97% !important;
+            display: block !important;
+
+            div {
+                float: none !important;
+            }
+        }
+
+        th {
+            &.second {
+                padding-left: 54px !important;
+            }
+
+            &.third {
+                padding-left: 10px !important;
+            }
+        }
+
+        div#search {
+            margin-left: 0px !important;
+
+            input {
+                width: 230px !important;
+            }
+        }
+    }
+
+    @media screen and (max-width: 365px) {
+        table.desktop {
+            display: none;
+        }
+
+        table.tablet {
+            display: none;
+        }
+
+        table.mobile {
+            margin-left: 0 !important;
+        }
+
+        div#caption {
+            height: 76px;
+            padding-top: 20px;
+            text-align: center;
+            width: 89% !important;
+            display: block !important;
+        }
+
+        div#icons {
+            height: 76px;
+            text-align: center;
+            padding-top: 0px;
+            float: none !important;
+            width: 97% !important;
+            display: block !important;
+
+            div {
+                float: none !important;
+            }
+        }
+
+        th {
+            &.second {
+                padding-left: 54px !important;
+            }
+
+            &.third {
+                padding-left: 10px !important;
+            }
+        }
+
+        div#search {
+            margin-left: 0px !important;
+
+            input {
+                width: 230px !important;
+            }
+
+            button {
+                margin-left: 0px !important;
+            }
         }
     }
 
